# pwiz_readspeed

./: CMakeLists.txt  README  jamroot.patch  tic_pwiz.cpp  tic_pwiz_parallel.cpp
